hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__function_parameter_incorrect_arity.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "No function 'f' found for parameters of types (number)",
                span: 1:34; [33, 34],
                level: Error,
            },
        ],
        inputs: (),
    },
)
