hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__function_parameter_incorrect_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "No function 'add' found for parameters of types (number, boolean)",
                span: 1:32; [31, 32],
                level: Error,
            },
        ],
        inputs: (),
    },
)
