hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__function_parameter_invalid_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Identifier 'unknown' not found",
                span: 1:10; [9, 16],
                level: Error,
            },
        ],
        inputs: (),
    },
)
