hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__function_parameter_returned_wrong_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Function f expected to return type boolean, got number",
                span: 1:31; [30, 31],
                level: Error,
            },
        ],
        inputs: (),
    },
)
